--- a/index.html
+++ b/index.html
@@ -14,25 +14,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 <body>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#G-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Good examples</a>
-    <a href="#F-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Faded examples</a>
-    <a href="#N-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Noisy examples</a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#G-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Good examples</a>
-    <a href="#F-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Faded examples</a>
-    <a href="#N-E" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Noisy examples</a>
-  </div>
-</div>
-
+  
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Audio context encoder</h1>
@@ -41,109 +23,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </header>
 
 
-<!-- Second Grid -->
-<div id="G-E"  class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-
-    <div class="w3-twothird">
-      <h1>Good examples</h1>
-         <h1><img src="images/Nsynth_6.png" alt="Trumpet" width="1000"></h1>
-
-        <h5>On this example, we find a string signal with a few harmonics. Both networks achieve reconstructions which are difficult to detect.</h5>
-
-            <ul style="list-style-type:none">
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_6_or.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Left: Ground truth
-                </li>
-
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_6_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Center: Magnitude (28.7 dB SNRms)
-                </li>
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_6_complex_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Right: Complex (20.9 dB SNRms)
-                </li>
-            </ul>
-
-         <h1><img src="images/Nsynth_7.png" alt="Trumpet" width="1000"></h1>
-
-        <h5>This example features a synthesized string signal, with several harmonics and a constant vibrato. Both networks achieve reconstructions that are difficult to detect.</h5>
-
-            <ul style="list-style-type:none">
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_7_or.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Left: Ground truth
-                </li>
-
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_7_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Center: Magnitude (29.2 dB SNRms)
-                </li>
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_7_complex_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Right: Complex (27.3 dB SNRms)
-                </li>
-            </ul>
-
-              <h1><img src="images/Nsynth_2.png" alt="Trumpet" width="1000"></h1>
-
-        <h5>On this example, we find a trumpet signal with a lot of information on high frequencies. Neither of the networks achieve very high SNRms values, nevertheless, it is quite hard to hear any artifacts.</h5>
-
-            <ul style="list-style-type:none">
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_2_or.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Left: Ground truth
-                </li>
-
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_2_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Center: Magnitude (11.4 dB SNRms)
-                </li>
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_2_complex_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Right: Complex (4.1 dB SNRms)
-                </li>
-            </ul>
-
-         <h1><img src="images/Nsynth_67.png" alt="Trumpet" width="1000"></h1>
-
-         <h5>On this example, we find a synthetic signal with a lot of modulations. Both networks represent this modulations in some way.
-         For the magnitude network, even on very high frequencies the modulations are still inpainted.
-         For the complex network, above 5Khz there is little information.</h5>
-
-            <ul style="list-style-type:none">
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_67_or.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Left: Ground truth
-                </li>
-
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_67_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Center: Magnitude (7.8 dB SNRms)
-                </li>
-                <li><audio controls>
-                    <source src="audio_examples/good/nsynth_67_complex_rec.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio> Right: Complex (5.1 dB SNRms)
-                </li>
-            </ul>
-
-    </div>
-  </div>
-</div>
 
 <!-- Third Grid -->
 <div id="F-E" class="w3-row-padding w3-padding-64 w3-container">
@@ -158,7 +37,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
             <ul style="list-style-type:none">
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_or.mp3" type="audio/mpeg">
+                    <source src="original3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Left: Ground truth
                 </li>
