--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
+  <body class="w3-light-grey">
+
 <body>
   
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+<header class="w3-container w3-light-grey w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Audio context encoder</h1>
     <h5 class="w3-xlarge">This website accompanies the work presented as a <a href="https://www.researchgate.net/publication/328600925_A_context_encoder_for_audio_inpainting" target="_blank">pre-print here</a>.</h5>
     <h5 class="w3-xlarge">The code used can be found <a href="https://github.com/andimarafioti/audioContextEncoder" target="_blank">here</a>. <a href="https://github.com/andimarafioti/audioContextEncoder" target="_blank" class="fa fa-github w3-hover-opacity"></a></h5>
