--- a/index.html
+++ b/index.html
@@ -21,19 +21,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Header -->
 <header class="w3-container w3-light-grey w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Audio context encoder</h1>
-    <h5 class="w3-xlarge">This website accompanies the work presented as a <a href="https://www.researchgate.net/publication/328600925_A_context_encoder_for_audio_inpainting" target="_blank">pre-print here</a>.</h5>
-    <h5 class="w3-xlarge">The code used can be found <a href="https://github.com/andimarafioti/audioContextEncoder" target="_blank">here</a>. <a href="https://github.com/andimarafioti/audioContextEncoder" target="_blank" class="fa fa-github w3-hover-opacity"></a></h5>
 </header>
 
-
-
-<!-- Third Grid -->
 <div id="F-E" class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Faded examples</h1>
 
-        <h1><img src="images/Nsynth_3.png" alt="Trumpet" width="1000"></h1>
+        <h1>Channel Convolution Network</h1>
 
          <h5>On this example, we find a pulsated string signal. Both networks achieve very high SNRms values, but they both present a faded artifact.
          This is quite easy to hear for the complex network and it is not as present for the magnitude network.</h5>
