--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <body>
   
 <!-- Header -->
-<header class="w3-container w3-light-grey w3-center" style="padding:128px 16px">
+<header class="w3-container w3-light-blue w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Audio context encoder</h1>
 </header>
 
