--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
             <ul style="list-style-type:none">
                 <li><audio controls>
-                    <source src="original3.wav" type="audio/wav">
+                    <source src="original1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Left: Original Signal
                 </li>
 
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_rec.mp3" type="audio/mpeg">
+                    <source src="cut1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Center: Signal with missing audio
                 </li>
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_complex_rec.mp3" type="audio/mpeg">
+                     <source src="recovered1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Right: Inpainted Audio
                 </li>
@@ -53,18 +53,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
              <ul style="list-style-type:none">
                 <li><audio controls>
-                    <source src="original3.wav" type="audio/wav">
+                    <source src="original2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Left: Original Signal
                 </li>
 
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_rec.mp3" type="audio/mpeg">
+                    <source src="cut2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Center: Signal with missing audio
                 </li>
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_complex_rec.mp3" type="audio/mpeg">
+                     <source src="recovered2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Right: Inpainted Audio
                 </li>
@@ -82,18 +82,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
           <ul style="list-style-type:none">
                 <li><audio controls>
-                    <source src="original3.wav" type="audio/wav">
+                    <source src="app_original.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Left: Original Signal
                 </li>
 
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_rec.mp3" type="audio/mpeg">
+                    <source src="app_corrupt.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Center: Signal with missing audio
                 </li>
                 <li><audio controls>
-                    <source src="audio_examples/faded/nsynth_3_complex_rec.mp3" type="audio/mpeg">
+                     <source src="app_fixed.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Right: Inpainted Audio
                 </li>
