--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                 <li><audio controls>
                     <source src="original2.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Left: Original Signal
+                    </audio> Original Signal
                 </li>
 
                 <li><audio controls>
                     <source src="cut2.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Center: Signal with missing audio
+                    </audio> Signal with missing audio
                 </li>
                 <li><audio controls>
                      <source src="recovered2.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Right: Inpainted Audio
+                    </audio> Inpainted Audio
                 </li>
             </ul>
       <h3> Three seconds of audio </h3>
@@ -55,18 +55,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
                 <li><audio controls>
                     <source src="original1.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Left: Original Signal
+                    </audio> Original Signal
                 </li>
 
                 <li><audio controls>
                     <source src="cut1.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Center: Signal with missing audio
+                    </audio> Signal with missing audio
                 </li>
                 <li><audio controls>
                      <source src="recovered1.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Right: Inpainted Audio
+                    </audio> Inpainted Audio
                 </li>
             </ul>
     </div>
@@ -78,24 +78,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Network Applied to Noisy Audio</h1>
-         <h5>Given 12 seconds of audio with noise added to the signal, we are able to replace the noisy sections with the network.</h5>
+         <h5>Given 12 seconds of audio with noise added to the signal, we are able to replace the noisy sections using our network.</h5>
 
           <ul style="list-style-type:none">
                 <li><audio controls>
                     <source src="app_original.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Left: Original Signal
+                    </audio> Original Signal
                 </li>
 
                 <li><audio controls>
                     <source src="app_corrupt.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Center: Signal with missing audio
+                    </audio> Signal with missing audio
                 </li>
                 <li><audio controls>
                      <source src="app_fixed.wav" type="audio/wav">
                     Your browser does not support the audio element.
-                    </audio> Right: Inpainted Audio
+                    </audio>Inpainted Audio
                 </li>
             </ul>
     </div>
