--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
             </ul>
       <h3> Three seconds of audio </h3>
         <h5>In this example, we hear three second of piano music with one second of audio cut out.</h5>
+        <h4> Note: These audio files are softer than those in the previous section so you'll need to increase your speaker's volume. </h4>
 
              <ul style="list-style-type:none">
                 <li><audio controls>
