--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
           <ul style="list-style-type:none">
                 <li><audio controls>
-                    <source src="app_original.wav" type="audio/wav">
+                    <source src="app_original3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Original Signal
                 </li>
 
                 <li><audio controls>
-                    <source src="app_corrupt.wav" type="audio/wav">
+                    <source src="app_corrupt3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio> Signal with missing audio
                 </li>
                 <li><audio controls>
-                     <source src="app_fixed.wav" type="audio/wav">
+                     <source src="app_fixed3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>Inpainted Audio
                 </li>
