--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Header -->
 <header class="w3-container w3-light-blue w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Audio Recovery</h1>
-  <h1 class="w3-margin w3-jumbo">Stat157</h1>
-  <h1 class="w3-margin w3-jumbo">Lillian Du, Linda Du, Ryan Liu</h1>
+  <h1 class="w3-margin">Stat157</h1>
+  <h1 class="w3-margin">Lillian Du, Linda Du, Ryan Liu</h1>
 </header>
 
 <div id="F-E" class="w3-row-padding w3-padding-64 w3-container">
