--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Audio Encoder Decoder</h1>
+      <h4> Note: Some example signals are louder than others, we recommend lowering the volume of your speakers.
       <h3> One second of audio </h3>
          <h5>In this example, we hear one second of piano music with one-third of a second of audio cut out. </h5>
 
